# mp3-player

./: .gitignore  .woodpecker.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.forgejo/workflows/: macos.yml
demo/: 3_armed_boxer_vs_the_flying_guillotine.frag  ShaderReloader.cpp  ShaderReloader.h  backrooms_gone_sexual.llm.frag  bad_topology.llm.frag  fullscreen.vert  gooey_ball_bois.frag  live.frag  plasma.frag  plasma.frag.qsb  plasma.original.frag  shader_demo copy.cpp  shader_demo.cpp  spectrum_bars.frag  spiral.frag  super_star.llm.frag
notes/: cross-platform.md  linux.md  macos.md  opus48_max_eval.txt  pass_2_016b474_opus48_max_eval.txt  pass_3_70132cc_opus48_xhigh_eval.txt  visualizer.md  windows.md
packaging/: pocketplayer.desktop
resources/: resources.qrc
resources/linux/: pocketplayer.desktop
resources/macos/: Info.plist.in
scripts/: build-appimage.sh  build-appimage.sh.bk  build-taglib-universal.sh  build_year_cases.py  extract_dates.py  make-icns.sh  package-appimage.sh  package-macos.sh
src/: AudioFormats.h  CoverLabel.h  DiscordPresence.cpp  DiscordPresence.h  ImportDialog.cpp  ImportDialog.h  Importer.cpp  Importer.h  LibraryFolder.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MediaEngine.cpp  MediaEngine.h  MediaSession.cpp  MediaSession.h  MetadataProbe.cpp  MetadataProbe.h  MprisController.cpp  MprisController.h  MusicLibrary.cpp  MusicLibrary.h  Notifier.cpp  Notifier.h  NowPlayingSession.h  NowPlayingSession.mm  PlayerController.cpp  PlayerController.h  PlaylistEditorDialog.cpp  PlaylistEditorDialog.h  PlaylistModel.cpp  PlaylistModel.h  PlaylistStore.cpp  PlaylistStore.h  ProcUtil.h  RemoteResolver.cpp  RemoteResolver.h  SettingsDialog.cpp  SettingsDialog.h  (+22 more)
tests/: YearNormalizeCli.cpp  YearParserTest.cpp
visualizer/: AudioVisualizer.h  fullscreen.vert  main.cpp  visualizer.frag
