cmake_minimum_required(VERSION 3.21)

project(PocketPlayer VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

# MPRIS D-Bus media control. On by default on Linux (where D-Bus is the norm),
# off elsewhere. Pulls in Qt6::DBus only when enabled.
if(UNIX AND NOT APPLE)
    option(ENABLE_MPRIS "Enable MPRIS D-Bus media control" ON)
else()
    option(ENABLE_MPRIS "Enable MPRIS D-Bus media control" OFF)
endif()

# Qt Widgets + Multimedia only. No WebEngine, no Qt Quick/QML — keeps the
# dependency surface and runtime CPU/GPU usage low.
find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets Multimedia Sql Concurrent Test)
# TagLib: lightweight tag reader — parses ID3/Vorbis frames without decoding audio.
find_package(taglib REQUIRED)

if(ENABLE_MPRIS)
    find_package(Qt6 REQUIRED COMPONENTS DBus)
endif()

qt_standard_project_setup()

qt_add_executable(mp3player
    src/main.cpp
    src/MainWindow.cpp
    src/MainWindow.h
    src/PlayerController.cpp
    src/PlayerController.h
    src/PlaylistModel.cpp
    src/PlaylistModel.h
    src/SettingsDialog.cpp
    src/SettingsDialog.h
    src/MusicLibrary.cpp
    src/MusicLibrary.h
    src/PlaylistStore.cpp
    src/PlaylistStore.h
    src/YearParser.cpp
    src/YearParser.h
    src/Theme.cpp
    src/Theme.h
    src/LibraryFolder.h
    src/CoverLabel.h
    src/AudioFormats.h
    src/TimeFormat.h
    resources/resources.qrc
)

target_link_libraries(mp3player PRIVATE
    Qt6::Core
    Qt6::Gui
    Qt6::Widgets
    Qt6::Multimedia
    Qt6::Sql
    Qt6::Concurrent
    TagLib::tag
)

if(ENABLE_MPRIS)
    target_sources(mp3player PRIVATE src/MprisController.cpp src/MprisController.h)
    target_link_libraries(mp3player PRIVATE Qt6::DBus)
    target_compile_definitions(mp3player PRIVATE HAVE_MPRIS)
endif()

message(STATUS "MPRIS D-Bus support: ${ENABLE_MPRIS}")

# ---- Tests ----
enable_testing()
qt_add_executable(year_test tests/YearParserTest.cpp src/YearParser.cpp src/YearParser.h)
target_include_directories(year_test PRIVATE src)
target_link_libraries(year_test PRIVATE Qt6::Core Qt6::Test)
# Optional golden fixture of real-world date strings (generated by
# scripts/build_year_cases.py). The test skips its data-driven case if absent.
target_compile_definitions(year_test PRIVATE
    YEAR_CASES_FILE="${CMAKE_CURRENT_SOURCE_DIR}/tests/year_cases.tsv")
add_test(NAME year_test COMMAND year_test)

# CLI used by scripts/build_year_cases.py to pre-fill the fixture's expected
# column with the parser's own output. Not a test; built on demand.
qt_add_executable(year_normalize tests/YearNormalizeCli.cpp
                  src/YearParser.cpp src/YearParser.h)
target_include_directories(year_normalize PRIVATE src)
target_link_libraries(year_normalize PRIVATE Qt6::Core)
